# esp32-move-detect

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old  test.py
.github/workflows/: ci.yaml
components/: Camera.h  Processor.h  ProcessorAverageBox.h  ProcessorAverageDif.h  ProcessorDefault.h  ProcessorDifference.h  ProcessorDifferenceBox.h  ProcessorDifferenceSimple.h  ProcessorMedianBox.h  ProcessorMedianDif.h  Server.h  WifiConfig.h  WifiController.h  WifiCredits.h  camera_pins.h
main/: CMakeLists.txt  Camera.config.h  Camera.cpp  Camera.h  Processor.cpp  ProcessorAverageBox.cpp  ProcessorAverageDif.cpp  ProcessorDefault.cpp  ProcessorDifference.cpp  ProcessorDifference.h  ProcessorDifferenceBox.cpp  ProcessorDifferenceSimple.cpp  ProcessorMedianBox.cpp  ProcessorMedianDif.cpp  Server.cpp  WifiController.cpp  camera.c  config.h  connect_wifi.c  main.c  main.cpp  vector.c  vector.h
