idf_component_register(SRCS
        "main.cpp"
        "Server.cpp"
        "Camera.cpp"

        "ProcessorMedianDif.cpp"
        "ProcessorMedianBox.cpp"
        "ProcessorDifference.cpp"
        "ProcessorDifferenceSimple.cpp"
        "ProcessorAverageDif.cpp"
        "ProcessorAverageBox.cpp"
        
        "WifiController.cpp"

        INCLUDE_DIRS "."
)
